--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "NODE_ENV=dev nodemon index.js",
+    "start": "NODE_ENV=dev node index.js",
     "start-win": "SET NODE_ENV=dev&&nodemon index.js",
     "test": "NODE_ENV=test mocha './tests/**/**/.test.js' --timeout 10000 --exit",
     "test-win": "SET NODE_ENV=test&&mocha  --timeout 10000 --exit --recursive",
