--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-infinite-ticker": "^2.2.0",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
